# hdeval

./: .gitignore  HDLEval-comb.hdeval  NOTICE  README.md  TODO  __init__.py  crypt  decrypt  hdeval.py  myproject.toml  pyproject.toml  robots.txt  ruff.toml  setup.py
hdeval.egg-info/: PKG-INFO  SOURCES.txt
sample/: 24a.hdeval  sample_24a.hdeval
src/: decrypt
src/hdeval/: __init__.py  hdeval.py  hdeval_interface.py  interface.py  yaml2yamls.py
src/hdeval/hdeval-RISCV/decode/: IDu_0.hdeval  IDu_1.hdeval
src/hdeval/hdeval-RISCV/execute/: ALU_0.hdeval  ALU_1.hdeval  IDu_EXu_0.hdeval  IDu_EXu_1.hdeval
src/hdeval/hdeval-RISCV/fetch/: IFu_IDu_0.hdeval  IFu_IDu_1.hdeval  pc_reg_0.hdeval  pc_reg_1.hdeval  reg_file_0.hdeval  reg_file_1.hdeval
src/hdeval/hdeval-RISCV/top/: Top_0.hdeval  Top_1.hdeval
src/hdeval/hdeval-comb/: 24a-pipe.hdeval  24a.hdeval  24a.yaml  24a_pipe.hdeval  VerilogEval-Human.hdeval  VerilogEval-Machine.hdeval  VerilogEval2-comb.hdeval  VerilogEval2-pipe.hdeval  VerilogEval2.hdeval
src/hdeval/hdeval-comb/yaml_files_pipe/: ABBA_bus_spec.yaml  AES32DSI_spec.yaml  AES32ESMI_spec.yaml  AddSubUnit_spec.yaml  Addition_Subtraction_Comb_spec.yaml  AddressDecoder_spec.yaml  FPAddSubUnit_spec.yaml  FPMultiplierUnit_spec.yaml  MultiplierUnit_spec.yaml  RippleCarryAdder_spec.yaml  SHA256SIG0_spec.yaml  SHA256SIG1_spec.yaml  SHA256SUM0_spec.yaml  SHA512SIG0H_spec.yaml  SHA512SIG1L_spec.yaml  SegmentCheck_spec.yaml  Zip_spec.yaml  _4_replication_spec.yaml  _7seg_display_spec.yaml  adder_8bit_spec.yaml  adder_spec.yaml  alt_full_adder_spec.yaml  alt_mux_4to1_spec.yaml  alu_simple_spec.yaml  alu_spec.yaml  and_reduction_spec.yaml  andn_spec.yaml  assign_twos_complement_spec.yaml  base_width_demo_spec.yaml  basic_logic_spec.yaml  biased_sign_compare_spec.yaml  biased_sign_mult_spec.yaml  (+106 more)
src/hdeval/hdeval-pipe/: 24a_pipe.hdeval  24b_pipe.hdeval
(+20 files in other folders)
