[tool.poetry]
name = "hdeval"
version = "0.1.0"
description = "Hardware Description Evaluation Interface"
authors = ["MASC"]
repository = "https://github.com/masc-ucsc/hdeval"

[tool.poetry.dependencies]
#python = "^3.8"
python = "^3.11"
pyyaml = "^6.0.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
decrypt = "hdeval.decrypt:main"
yaml2yamls = "hdeval.yaml2yamls:main"

# Include additional files in the package
include = [
    "src/decrypt",
    "src/hdeval/yaml2yamls.py",
    "src/hdeval/hdeval-comb/**/*"
]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

