[tool.poetry]
name = "hdeval"
version = "0.1.0"
description = "Hardware Description Evaluation Interface"
authors = ["MASC group <frabieik@ucsc.edu>"]
license = "MIT"
readme = "README.md"
python = "^3.6"

# Include additional files in the package
include = [
    "src/decrypt",
    "src/hdeval/hdeval-comb/**/*",
    "src/hdeval/hdeval-pip/**/*",
    "src/hdeval/yaml2yamls.py"
]

[tool.poetry.dependencies]
python = "^3.6"
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

